hits: 1 - User data sending from login.html to mySQL

--- a/ex4/public/login.html
+++ b/ex4/public/login.html
@@ -11,6 +11,7 @@
     <form class="loginForm flex flex-col w-full h-auto" action="/manual_login" method="POST">
         <input class="inputName w-5/6 h-14 bg-black outline-none border border-solid border-white rounded-md px-4 mb-4 self-center text-white" type="text" name="user_name">
         <input class="inputPassword w-5/6 h-14 bg-black outline-none border border-solid border-white rounded-md px-4 mb-4 self-center text-white" type="password" name="user_password">
+        <input class="inputPassword w-5/6 h-14 bg-black outline-none border border-solid border-white rounded-md px-4 mb-4 self-center text-white" type="email" name="user_email">
         
         <button class="submitButton self-center w-5/6 h-14 bg-purple-600 text-white rounded-md text-lg cursor-pointer" type="submit">Submit</button>
     </form>
