First version of the project made! V1

--- a/ex4/public/login.html
+++ b/ex4/public/login.html
@@ -35,11 +35,11 @@
                     <hr class="border-gray-400">
                 </div>
       
-                <button class="bg-white border py-2 w-full rounded-xl mt-5 flex justify-center items-center text-sm hover:scale-105 duration-300 text-[#002D74]">
+                <div onclick="window.location.href = '/login/google'" class="cursor-pointer bg-white border py-2 w-full rounded-xl mt-5 flex justify-center items-center text-sm hover:scale-105 duration-300 text-black">
                 <img class="w-6 mr-2" src="icons/google.color.png" alt="">
                     <p class="content">Login with Google</p>
                     <p class="toHide content">Sign Up with Google</p>
-                </button>
+                </div>
             </form>
       
             <div class="content mt-5 text-xs border-b border-gray-300 py-4 text-black">
