--- a/ex4/index.html
+++ b/ex4/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Hello world</h1>
+<body class="w-full h-screen flex justify-center flex-col gap-2">
+    <h1 class=" self-center text-3xl">Welcome!</h1>
+    <h1 class=" self-center text-2xl">You logged in successfuly!</h1>
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
-    <script type="module" src="index.js"></script>
+        * {
+            font-family: "Poppins", sans-serif;
+        }
+    </style>
 </body>
 </html>
